--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
 
     <!-- Text to be shown when there is no data to display -->
     <string name="no_earthquakes">No earthquakes found.</string>
+
+    <!-- Error message when there is no internet connectivity -->
+    <string name="no_internet">No internet connection.</string>
 </resources>
